# grace

./: .ghci  BUGS  Makefile  QQ.md  cabal.project  grace.cabal  qq.code-workspace
js/: example.js  rec.js  runtime.mjs  x.js
qq-src/: INTRO.html  add.qq  beta.qq  comments.qq  constructors.qq  dhall  functions.qq  lazy_product.qq  lists.qq  literals.qq  logic.qq  macros.qq  namespaces.qq  notebook.qq  numbers.qq  parser.qq  patterns.qq  rec.qq  strings.qq  symbols.qq  test.qq  tuples.qq  types.qq  unique_hashes.md  x.qq
qq-src/comp/: code-qq.js
src/: QQ.hs
src/Grace/: Lexer.hs  Parser.hs  Test.hs
src/QQ/: Compiler.hs  ConditionalTypes.hs  Core.hs  Eval.hs  Evaluate.hs  Hell.hs  Logic.hs  Parser.hs  Pretty.hs  QQ.md  Value.hs
src/Verse/: Core.hs  Eval.hs  Lexer.hs  Parser.hs  Pretty.hs
