cabal-version: >=1.10
name:          grace
version:       1.0.0
license-file:  LICENSE
author:        Gabriella Gonzalez
maintainer:    Gabriel439@gmail.com
build-type:    Simple

library
  hs-source-dirs:   src
  build-depends:
      aeson
    , base
    , containers
    , Earley
    , filepath
    , generic-lens
    , insert-ordered-containers
    , lens
    , megaparsec
    , modern-uri
    -- , logicst
    , mtl
    , parser-combinators
    , prettyprinter
    , prettyprinter-ansi-terminal
    , safe-exceptions
    , scientific
    , stm
    , string-interpolate
    , template-haskell
    , text                         >=1.2.4.0
    , unordered-containers
    , logict

  exposed-modules:
    Grace.Context
    Grace.Domain
    Grace.Existential
    Grace.HTTP
    Grace.Import
    Grace.Infer
    Grace.Input
    Grace.Interpret
    Grace.Lexer
    Grace.Location
    Grace.Monotype
    Grace.Normalize
    Grace.Parser
    Grace.Pretty
    Grace.Syntax
    Grace.TH
    Grace.Type
    Grace.Value
    Grace.Width
    Verse.Core
    Verse.Lexer
    Verse.Pretty
    Verse.Parser
    Verse.Eval
    QQ.Core
    QQ.Pretty

  other-modules:    Grace.Compat
  default-language: Haskell2010
  ghc-options:      -Wall -foptimal-applicative-do

  if impl(ghcjs)
    hs-source-dirs: ghcjs
    build-depends:
        ghcjs-base
      , ghcjs-fetch

  else
    hs-source-dirs:  ghc
    build-depends:
        ansi-terminal
      , haskeline
      , http-client
      , http-client-tls
      , http-types
      , optparse-applicative
      , repline
      , terminal-size

    exposed-modules:
      Grace
      Grace.REPL

executable grace
  main-is:          Main.hs
  build-depends:
      base
    , grace

  hs-source-dirs:   grace
  default-language: Haskell2010

  if impl(ghcjs)
    buildable: False

executable try-grace
  main-is:          Main.hs
  build-depends:
      aeson
    , async
    , base
    , containers
    , ghcjs-base
    , grace
    , insert-ordered-containers
    , mtl
    , scientific
    , stm
    , text
    , transformers
    , uri-encode

  hs-source-dirs:   try-grace
  ghc-options:      -Wall
  default-language: Haskell2010

  if !impl(ghcjs)
    buildable: False

test-suite tasty
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
      base
    , directory
    , filepath
    , grace
    , mtl
    , prettyprinter
    , safe-exceptions
    , tasty
    , tasty-hunit
    , tasty-silver
    , text

  hs-source-dirs:   tasty
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite doctest
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
      base
    , doctest

  hs-source-dirs:   doctest
  default-language: Haskell2010
  ghc-options:      -Wall
